# Algorithms

./: .gitignore  README.md  untitled.txt
C++/: CMakeLists.txt  IOStreamsInOut.cpp  IOStreamsInputFormatted.cpp  IOStreamsInputUnformatted.cpp  Makefile  accessRights.cpp  autoExplicit.cpp  automaticReturnType.cpp  bigArray.cpp  bindAndFunctionDispatchTable.cpp  bindLambdaComparison.cpp  built_inLiteral.cpp  callableUnitFunction.cpp  callableUnitFunctionObject.cpp  callableUnitLambaFunction.cpp  castConst.cpp  castDynamic.cpp  castReinterpret.cpp  castStatic.cpp  classMemberInitializer.cpp  classMemberInitializerWidget.cpp  conditionVariablePingPong.cpp  constExpression.cpp  constructor.cpp  constructorDelegation.cpp  constructorExplicit.cpp  constructorInitializer.cpp  copyMoveSemantic.cpp  cyclicReference.cpp  decltype.cpp  default.cpp  delete.cpp  dequeModify.cpp  destructor.cpp  dotProduct.cpp  dotProductAsync.cpp  enum.cpp  explicit.cpp  forwardList.cpp  functionDefault.cpp  (+93 more)
C++/Code/: IOStreams.cpp  IOStreamsRandom.cpp  alternativeFunctionSyntax.cpp  array.cpp  asyncLazyEager.cpp  auto.cpp  bindAndFunction.cpp  conditionVariable.cpp  constExpressionCpp14.cpp  constructorInheriting.cpp  functionOverload.cpp  iteratorStream.cpp  lambdaFunction.cpp  lambdaFunctionClosure.cpp  myNew.hpp  operatorOverloadingAssignment.cpp  pair.cpp  pointer.cpp  promiseFutureSynchronize.cpp  raii.cpp  regexReplace.cpp  regexSearch.cpp  safeInitializationStatic.cpp  singleton.cpp  stlAlgorithms.cpp  stlAlgorithmsRemove.cpp  stlContainerSearchRange.cpp  stlOrderedAssoziativeContainerAssoziativeArray.cpp  stlOrderedAssoziativeContainerModify.cpp  string.cpp  stringAccess.cpp  stringModification.cpp  templateCRTPRelational.cpp  templateClassTemplateInheritance.cpp  templateClassTemplateSpecialFriendship.cpp  templatePerfectForwarding.cpp  templateTypes.cpp  tupleHelper.cpp  uniqueLock.cpp  unorderedMap.cpp
C++/Code/solutions/: automaticReturnType.cpp  dispatchConcepts.cpp  explicitToImplicit.cpp  mcal_reg.h  polymorph.cpp  power3.cpp  regexReplaceDoubles.cpp  stringFind.cpp  unorderedSetMultiset.cpp
C++/solutions/: CMakeLists.txt  IOStreamsFraction.cpp  IOStreamsStreamBuffer.cpp  Makefile  array.cpp  bigArray.cpp  bindLambdaComparison.cpp  classMemberInitializerWidget.cpp  constructorDelegationRecursive.cpp  countDown.cpp  dispatchGeneric.cpp  dispatchPolymorph.cpp  gcdVariations.cpp  initializerList.cpp  lambdaFunctionCapture.cpp  led.cpp  lock.cpp  makeTriple.cpp  operatorOverloadingLambda.cpp  perfectForwarding.cpp  power1.cpp  power2.cpp  promiseFutureException.cpp  rangedBasedForLoop.cpp  regexSearchEmail.cpp  regexWordStatistic.cpp  shareMe.cpp  singletonMultithreading.cpp  stlAlgorithmenAccumulate.cpp  stlAlgorithmenForEach.cpp  stringInputOutput.cpp  sum.cpp  templateAdd.cpp  templateAutomaticReturnTypeTypeTraits.cpp  templateCRTPRelational.cpp  templateClassTemplateMethods2.cpp  templateClassTemplateMethods3.cpp  templateIsPointer.cpp  templateNonTypeParameter.cpp  templateTypes.cpp  (+7 more)
DS_Algos/: 1d_vector.txt  2d_vector.txt  Add_2_Linked_list.txt  Convert_BinaryTree_to_DLL.txt  Hashing.txt  Maxm_width_tree.txt  Merge_sort_list.txt  Print_node_k_distance_from_root.txt  Set.txt  Spiral.txt  String.txt  Zig_Zag list.txt  design.txt  design_2.txt  intersection_Union.txt  map.txt  stack.txt  stack_queue.txt  tree.txt
DS_Algos/Bit_Wise/: Count_set_bit.txt  find_consecutive_ones.txt
DS_Algos/Code-2016-03-17/: Add_2_No_As_A_List.txt  Anagram.txt  BST_search_k.txt  Binary_Srch_1.txt  Equilibrium.txt  Hashing_in_C.txt  Intersection_of_2_linked_list.txt  LCA(Lowest common Ancestor.txt  New Text Document.txt  Nut_bolt_array.txt  Panagram.txt  Pascal_triangle.docx  Queue.txt  Quick_sort_hoare.txt  Recursion_Iterative_Length_Single_list.docx  Singly_List.rtf  Spiral matrix.txt  Stack.rtf  Taks.txt  Tree_basic.txt  find_the_element_that_appear_once.txt  square_root_2.txt  stack_using_array
DS_Algos/Code-2016-03-17/1_Search/: binary_srch.txt  linear_srch.txt
DS_Algos/Code-2016-03-17/4_Dynamic Programming/: LCS.txt
DS_Algos/Code-2016-03-17/5_Sorting/: Quick_sort_simple_lomuto_partitioning.txt
DS_Algos/Code-2016-03-17/7_Graph_Greedy/: Adj_list.txt
DS_Algos/Code-2016-03-17/C__C++/: 1st.txt  Graph_Creation.txt  Palindrome_in_C++.txt  Reverse_Link_list_by_recursion.txt  Stack.txt  String_Copy.txt
DS_Algos/Code-2016-03-17/Graph/: BFS.txt  BFS_Recursive_C++.txt  BFS_stack_C++.txt  Create a graph from Adjacency List.docx  DFS.rtf  DFS.txt  Graph_Contain_Cycle.txt
DS_Algos/Code-2016-03-17/Java_/: Deletion_Single_List.docx  Insert_In_Single_list.docx  Length_Of_llist_iter_recur.docx  Single_List_Java.rtf
DS_Algos/Code-2016-03-17/Stack_Queue/: balanced_paranthesis.cpp  stack_using_list.cpp
DS_Algos/Design/: System Design Interview Preparation.docx
LeetCode/: 11.cpp  1170.cpp  14.cpp  146.cpp  17.cpp  19.cpp  21.cpp  217.cpp  238.cpp  26.cpp  27.cpp  31.cpp  33.cpp  34.cpp  94.cpp  README.md  https  question.txt
LeetCode/All_Problem/: 1st
LeetCode/All_Problem/Arrays/: 219.cpp  325.cpp  340.cpp  480.cpp  56.cpp
LeetCode/All_Problem/Binary_search/: 278.cpp  704.cpp
LeetCode/All_Problem/DP/: 1137.cpp
LeetCode/All_Problem/Linked_Lists/: 141.cpp  328.cpp
LeetCode/All_Problem/Math/: 29.cpp  50.cpp
LeetCode/All_Problem/OA/: crop  (+3 more)
LeetCode/Amazon/: 144.cpp  1st  1st.cpp  215.cpp  226.cpp  230.cpp  347.cpp  692.cpp  7.cpp  938.cpp
LeetCode/Binary_search/: 154.cpp  33.cpp  74.cpp  81.cpp
LeetCode/DP/: 303.cpp  70.cpp  746.cpp  792.cpp  Ugly_Numbers  min_steps
LeetCode/Design/: 1244.cpp
LeetCode/Facebook/: 1.cpp  23.cpp  56.cpp  896.cpp  Notes.txt  crop.txt  prep.txt
LeetCode/Google/: 359.cpp
LeetCode/Graph/: 133.cpp  200.cpp  Graph_BFS
LeetCode/Linked_List/: 138.cpp
LeetCode/Mix/: 169.cpp  315.cpp
LeetCode/Tree/: 100.cpp  102.cpp  103.cpp  104.cpp  111.cpp  116.cpp  117.cpp  199.cpp  226.cpp  230.cpp  572.cpp  589.cpp  590.cpp  617.cpp  938.cpp  98.cpp  BST_Successor_Search.cpp
LeetCode/all_leetCode/: 11.cpp  17.cpp
LeetCode/max_sum/: 121.cpp  152.cpp
(+163 files in other folders)
